# VidaForge

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configs/stage1_ingestion/: config.yaml
configs/stage1_ingestion/step/: step1_probe.yaml  step2_screen.yaml  step3_transcode.yaml
configs/stage2_segmentation/: config.yaml
configs/stage2_segmentation/detector/: adaptive.yaml  content.yaml  hash.yaml  histogram.yaml  random.yaml  threshold.yaml  transnetv2.yaml  uniform.yaml
configs/stage2_segmentation/step/: step1_detect.yaml  step2_clip.yaml
configs/stage3_selection/: config.yaml
configs/stage3_selection/dedup/: cosmos.yaml  pdq.yaml
configs/stage3_selection/filter/: aesthetic.yaml  motion.yaml  optical.yaml  text.yaml
configs/stage3_selection/step/: step1_context.yaml  step2_filter.yaml  step3_dedup.yaml  step4_select.yaml
configs/stage4_annotation/: config.yaml
configs/stage4_annotation/serve/: vllm.yaml
configs/stage4_annotation/step/: step1_camera.yaml  step2_caption.yaml  step3_tag.yaml
configs/stage5_packaging/: config.yaml
configs/stage5_packaging/step/: automodel.yaml  vjepa2.yaml
configs/stage5_packaging/step/encoders/: wan.yaml
recipe/: stage1_ingestion.py  stage2_segmentation.py  stage3_selection.py  stage4_annotation.py  stage5_packaging.py
scripts/: run_pipeline_example.sh
scripts/stage1_ingestion/: run_step1_probe.sh  run_step2_screen.sh  run_step3_transcode.sh
scripts/stage2_segmentation/: run_step1_detect.sh  run_step2_clip.sh
scripts/stage3_selection/: run_step1_context.sh  run_step2_filter.sh  run_step3_dedup.sh  run_step4_select.sh
scripts/stage4_annotation/: run_step1_camera.sh  run_step2_caption.sh  run_step3_tag.sh
scripts/stage5_packaging/: run_automodel.sh  run_vjepa2.sh
vidaforge/: __init__.py
vidaforge/annotation/: __init__.py
vidaforge/annotation/camera/: __init__.py  client.py  config.py  orchestrator.py  parse.py  prompt.py  schema.py  worker.py
vidaforge/annotation/caption/: __init__.py  client.py  config.py  orchestrator.py  parse.py  prompt.py  schema.py  worker.py
vidaforge/annotation/tag/: __init__.py  client.py  config.py  orchestrator.py  parse.py  prompt.py  schema.py  worker.py
vidaforge/common/: __init__.py  asset.py  hydra.py  json.py  paths.py  ray.py  summary.py
vidaforge/filters/: __init__.py  rules.py  scale.py
vidaforge/index/: __init__.py  parquet.py  resume.py
vidaforge/index/processing/: __init__.py  asyncio.py  base.py  ray_actor.py  ray_async_actor.py  ray_dedup.py  ray_task.py  sync.py
vidaforge/ingestion/: __init__.py
vidaforge/ingestion/probe/: __init__.py  config.py  orchestrator.py  worker.py
vidaforge/ingestion/screen/: __init__.py  config.py  orchestrator.py  worker.py
vidaforge/ingestion/transcode/: __init__.py  config.py  orchestrator.py  worker.py
vidaforge/media/: __init__.py  clip.py  extract.py  frames.py  motion.py  probe.py  saliency.py  transcode.py
vidaforge/models/: __init__.py  cosmos_embed.py  transnetv2.py
vidaforge/packaging/: __init__.py
vidaforge/packaging/automodel/: __init__.py  config.py  encoder.py  orchestrator.py  output.py  resolution.py  temporal.py  wan.py  worker.py
vidaforge/packaging/vjepa2/: __init__.py  config.py  orchestrator.py
vidaforge/segmentation/: __init__.py
vidaforge/segmentation/clip/: __init__.py  config.py  orchestrator.py  timing.py  worker.py
vidaforge/segmentation/detect/: __init__.py  config.py  orchestrator.py  ranges.py  registry.py  transnetv2.py  worker.py
vidaforge/selection/: __init__.py
vidaforge/selection/context/: __init__.py  config.py  orchestrator.py  worker.py
vidaforge/selection/dedup/: __init__.py  base.py  config.py  cosmos.py  faiss_index.py  grouping.py  orchestrator.py  pdq.py  registry.py  worker.py
vidaforge/selection/filter/: __init__.py  aesthetic.py  base.py  config.py  motion.py  optical.py  orchestrator.py  registry.py  text.py  worker.py
vidaforge/selection/select/: __init__.py  config.py  orchestrator.py  worker.py
vidaforge/serving/: __init__.py  config.py  openai.py  vllm.py
vidaforge_adapters/: __init__.py
vidaforge_adapters/automodel/: __init__.py  collate.py  dataloader.py  dataset.py  eval_loss.py  pretrain.py  recipe.py  run.sh  run_eval.sh  sampler.py
vidaforge_adapters/automodel/configs/: wan2_1_t2v_flow.yaml
vidaforge_adapters/automodel/tools/: __init__.py  split_packed_dataset.py
vidaforge_adapters/automodel/uv_patch/: README.md  pyproject.toml
vidaforge_adapters/vjepa2/: __init__.py  dataset.py  eval_loss.py  patch.py  pretrain.py  run.sh  run_eval.sh  sampling.py
vidaforge_adapters/vjepa2/configs/vitg16/: pretrain_vitg16.yaml
vidaforge_adapters/vjepa2/tools/: __init__.py  make_manifest_from_automodel_split.py
vidaforge_adapters/vjepa2/uv_patch/: pyproject.toml
viewers/: __init__.py  coerce.py  context_viewer_common.py  stage1_step1_probe_viewer.py  stage1_step2_screen_viewer.py  stage1_step3_transcode_viewer.py  stage1_streamlit_viewer.py  stage2_step1_detect_viewer.py  stage2_step2_clip_viewer.py  stage2_streamlit_viewer.py  stage3_step1_context_viewer.py  stage3_step2_filter_viewer.py  stage3_step3_dedup_viewer.py  stage3_step4_select_viewer.py  stage3_streamlit_viewer.py  stage4_step1_camera_viewer.py  stage4_step2_caption_viewer.py  stage4_step3_tag_viewer.py  stage4_streamlit_viewer.py  stage5_automodel_dataset_viewer.py  vidaforge_viewer.py  videoforge_viewer.py  viewer_common.py
viewers/static/: player.html
